Use common view for petition create and edit routes

--- a/travelsFront/app/templates/navbar.hbs
+++ b/travelsFront/app/templates/navbar.hbs
@@ -20,7 +20,7 @@
             {{/paper-content}}
             {{#menu-item onClick=(transition-to "profile")}}Profile{{/menu-item}}
             {{#menu-item onClick=(transition-to "petitionList")}}Petitions{{/menu-item}}
-            {{#menu-item onClick=(transition-to "petition")}}New Petition{{/menu-item}}
+            {{#menu-item onClick=(transition-to "petition" "new")}}New Petition{{/menu-item}}
         {{/unless}}
       {{/paper-list}}
       {{/paper-content}}
