Common base adapter class based on ember-django-adapter
models can modify api behaviour via __api__ attr

--- a/travelsFront/app/templates/components/model-form/field.hbs
+++ b/travelsFront/app/templates/components/model-form/field.hbs
@@ -97,7 +97,7 @@
     {{/paper-option}}
   {{/each}}
 {{/component}}
-    {{#if (and errors isTouched)}}
+    {{#if (and hasErrors isTouched)}}
         <div class="md-input-messages-animation md-auto-hide" ng-messages>
           {{#each errors as |error index|}}
             <div
