--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -6,4 +6,10 @@
 
 {{#paper-content classNames="md-padding"}}
     {{ model-form/form model ui="user"}}
+    {{#paper-button 
+        onClick=submit 
+        warn=true 
+        raised=true
+        disabled=inProgress
+    }}SUBMIT{{/paper-button}}
 {{/paper-content}}
