--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -26,20 +26,7 @@
         {{#each model as |petition|}}
           {{#if petition.project.name}}
           {{#paper-item}}
-            <tr>
-              <td>{{petition.name}}</td>
-              <td>{{petition.surname}}</td>
-              <td>{{petition.project.name}}</td>
-              <td>{{petition.arrivalPoint.name}}</td>
-              <td>{{petition.creationDate}}</td>
-              <td>{{petition.updateDate}}</td>
-              <td>{{petition.taskStartDate}}</td>
-              <td>{{petition.taskEndDate}}</td>
-              <td>{{petition.status.name}}</td>
-              <td>{{#paper-button type="submit" raised=true onClick=(action "petitionEdit" petition.id)}}Επεξεργασια{{/paper-button}}</td>
-              <td>{{#paper-button type="submit" raised=true warn=true onClick=(action "petitionDelete" petition.id petition.status.name)}}Διαγραφη{{/paper-button}}</td>
-              <td>{{#paper-button type="submit" raised=true onClick=(action "petitionUndo" petition.id)}}Αναιρεση Υποβολης{{/paper-button}}</td>
-            </tr>
+            {{petition-listing petition=petition}}
           {{/paper-item}}
           {{/if}}
         {{/each}}
