Minor improvements to form submission action
- Avoid display of adapter raw error message
- Set profile fields to map backend API names to be able to display
  backend errors (a side effect of ember-django-adapter)
- display green message on success

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -50,7 +50,7 @@ md-content.md-form-messages {
   }
 
   md-content.md-form-success {
-    background-color: color($link, '800'); 
+    background-color: color('green', '800'); 
     color: #fff;
   }
 }
