Support for block based model forms and extra form actions

--- a/travelsFront/app/templates/components/model-form/controls.hbs
+++ b/travelsFront/app/templates/components/model-form/controls.hbs
@@ -8,4 +8,5 @@
 {{#if showReset}}
     {{#paper-button onClick=reset accent=true raised=true}}RESET{{/paper-button}}
 {{/if}}
+{{ yield }}
 {{/paper-content}}
