--- a/travelsFront/app/templates/components/model-form/form.hbs
+++ b/travelsFront/app/templates/components/model-form/form.hbs
@@ -1,4 +1,22 @@
 {{# if hasBlock}}
+    {{yield (hash 
+        messages=(component 'model-form/messages' 
+                    isInvalid=isInvalid 
+                    submitError=submitError
+                    submitMessage=submitMessage)
+        fields=(component 'model-form/fields' 
+                    object=model 
+                    fieldsets=meta.fieldsets 
+                    isTouched=isTouched)
+        controls=(component 'model-form/controls' 
+                    object=model
+                    submit=(action 'submit')
+                    submitLabel=submitLabel
+                    reset=(action 'reset')
+                    hideReset=hideReset
+                    inProgress=inProgress)
+            )
+    }}
 {{else}}
     {{model-form/messages 
         isInvalid=isInvalid 
