Clean up ember user-petion models

--- a/travelsFront/app/templates/navbar.hbs
+++ b/travelsFront/app/templates/navbar.hbs
@@ -21,7 +21,7 @@
             {{#menu-item onClick=(transition-to "profile")}}Profile{{/menu-item}}
             {{#unless (can "approve petition")}}
               {{#menu-item onClick=(transition-to "petitionList")}}Petitions{{/menu-item}}
-              {{#menu-item onClick=(transition-to "userPetition")}}New Petition{{/menu-item}}
+              {{#menu-item onClick=(transition-to "userPetition" "new")}}New Petition{{/menu-item}}
             {{/unless}}
             {{#if (can "approve petition")}}
               {{#menu-item onClick=(transition-to "advancedList")}}Petitions for Approval{{/menu-item}}
