--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -14,7 +14,7 @@
           <th>Ημ/νία Αναχώρησης</th>
           <th>Ημ/νία Επιστροφής</th>
           <th>Κατάσταση</th>
-          <th>{{#paper-button raised=true primary=true onClick=(transition-to "petition") href="/petition" bubbles=false}}Νεα Αιτηση{{/paper-button}}</th>
+          <th>{{#paper-button raised=true primary=true onClick=(transition-to "userPetition") href="/userPetition/new" bubbles=false}}Νεα Αιτηση{{/paper-button}}</th>
         </tr>
       {{/paper-list}} 
     </thead>
