--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -1,14 +1,18 @@
-<tr>
-  <td>{{petition.first_name}}</td>
-  <td>{{petition.last_name}}</td>
-  <td>{{petition.project.name}}</td>
-  <td>{{petition.arrivalPoint.name}}</td>
-  <td>{{petition.creationDate}}</td>
-  <td>{{petition.updateDate}}</td>
-  <td>{{petition.taskStartDate}}</td>
-  <td>{{petition.taskEndDate}}</td>
-  <td>{{petition.status}}</td>
-  <td>{{#link-to "userPetition" petition.petitionID}}Επεξεργασια{{/link-to}}</td>
-  <td>{{#paper-button type="submit" raised=true warn=true onClick=(action "petitionDelete" petition.petitionID petition.status)}}Διαγραφη{{/paper-button}}</td>
-  <td>{{#paper-button type="submit" raised=true onClick=(action "petitionUndo" petition.petitionID)}}Αναιρεση Υποβολης{{/paper-button}}</td>
-</tr>
+<td>{{petition.first_name}}</td>
+<td>{{petition.last_name}}</td>
+<td>{{petition.project.name}}</td>
+<td>{{petition.arrivalPoint.name}}</td>
+<td>{{petition.creationDate}}</td>
+<td>{{petition.updateDate}}</td>
+<td>{{petition.taskStartDate}}</td>
+<td>{{petition.taskEndDate}}</td>
+<td>{{petition.status}}</td>
+<td class="icon-cell">
+    {{#link-to "userPetition" petition.petitionID}}{{fa-icon "pencil"}}{{/link-to}}
+</td>
+<td class="icon-cell">
+    {{#paper-button type="submit" raised=true warn=true onClick=(action "petitionDelete" petition.petitionID petition.status) iconButton=true}}{{fa-icon "trash-o"}}{{/paper-button}}
+</td>
+<td class="icon-cell">
+    {{#paper-button type="submit" raised=true onClick=(action "petitionUndo" petition.petitionID) iconButton=true}}{{fa-icon "undo"}}{{/paper-button}}
+</td>
