ui: Clean up petition list buttons

--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -1,6 +1,7 @@
 {{page-toolbar pageTitle="Petition List"}}
 
-<p class="rt">{{#paper-button raised=true primary=true onClick=(transition-to "userPetition") href="/userPetition/new" bubbles=false warn=true}}Νεα Αιτηση{{/paper-button}}</p>
+<p class="rt">
+    {{#paper-button raised=true primary=true onClick=(transition-to "userPetition" "new") bubbles=false }}Νεα Αιτηση{{/paper-button}}</p>
 
 <table class="table"> 
     <thead>
