--- a/travelsFront/app/templates/user-petition.hbs
+++ b/travelsFront/app/templates/user-petition.hbs
@@ -5,7 +5,7 @@
 {{/if}}
 
 {{#paper-content classNames="md-padding"}}
-    {{ model-form/form model ui="user"}}
+    {{ model-form/form model}}
     {{#paper-button 
         onClick=(action "submitToState2")
         warn=true
