Change table style

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -63,7 +63,7 @@ table {
     border-radius: 2px;
     overflow: hidden;
     th {
-        background: #ff7043;
+        background: #C74286;
         color: white;
         padding: 12px 8px;
         text-align: left;
@@ -77,14 +77,14 @@ table {
         padding-right: 1px;
     }
     tr:nth-child(2) td {
-        background-color: #fcf1f0;
+        background-color: #FDF0F8;
     }
 }
 
 p.rt {
     text-align: right;
     a {
-        display: inline-block;
+        display: inline-block;      
     }
 }
 
