--- a/travelsFront/app/templates/user-petition.hbs
+++ b/travelsFront/app/templates/user-petition.hbs
@@ -1,10 +1,7 @@
-{{#if newPetition}}
-{{ page-toolbar pageTitle="Create a petition" }}
-{{else}}
-{{ page-toolbar pageTitle="Edit petition" }}
-{{/if}}
+{{ page-toolbar pageTitle=(if newPetition "Create a petition" "Edit petition") }}
 
 {{#paper-content classNames="md-padding"}}
+{{ newPetition }}
     {{ model-form/form model}}
     {{#paper-button 
         onClick=(action "submitToState2")
