--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -4,16 +4,23 @@
 body, body div.app, body div.app > div { height: 100%; }
 
 md-content.login-info {
-  background-color: color($background, '200');
+  background-color: #fd7a2b;
   padding: 16px;
   border-bottom: 1px solid color($background, '400');
   margin-bottom: 8px;
+  color: white;
   md-content.user-label {
     padding: 20px 16px 20px 0;
     background-color: transparent;
+    color: white;
   }
 }
 
+.menu-item {
+    &:hover {
+        background-color: color($background, '200');
+    }
+}
 
 .md-input-hint {
   position: relative;
@@ -90,4 +97,9 @@ p.rt {
 
 .md-button:hover {
     opacity: 0.9;
+}
+
+.logo {
+    background: url('images/grnet_logo.png') no-repeat 10px 10px;
+    background-size: 100px;
 }
