Change login info style

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -4,7 +4,7 @@
 body, body div.app, body div.app > div { height: 100%; }
 
 md-content.login-info {
-  background-color: #fd7a2b;
+  background-color: #BDBEF1;
   padding: 16px;
   border-bottom: 1px solid color($background, '400');
   margin-bottom: 8px;
