--- a/travelsFront/app/templates/navbar.hbs
+++ b/travelsFront/app/templates/navbar.hbs
@@ -3,8 +3,8 @@
 
     {{#paper-toolbar class="site-content-toolbar" tall=true}}
       <div class="logo layout-column layout-align-center-center">
-        <h3 style="margin: 0; margin-top: 3rem">Travel</h3>
-        <h5 style="margin: 0">Expenses</h5>
+          <h3 style="margin: 3rem 0 0">{{#link-to 'application'}}Travel{{/link-to}}</h3>
+          <h5 style="margin: 0">{{#link-to 'application'}}Expenses{{/link-to}}</h5>
       </div>
     {{/paper-toolbar}}
 
