--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -4,8 +4,8 @@
 <td>{{petition.arrival_point.name}}</td>
 <td>{{petition.creationDate}}</td>
 <td>{{petition.updateDate}}</td>
-<td>{{petition.task_start_date}}</td>
-<td>{{petition.task_end_date}}</td>
+<td>{{to-date petition.task_start_date}}</td>
+<td>{{to-date petition.task_end_date}}</td>
 <td>{{petition.status}}</td>
 <td class="icon-cell">
     {{#paper-button type="submit" raised=true onClick=(transition-to "userPetition" petition.petition_id) iconButton=true}}{{fa-icon "pencil"}}{{/paper-button}}
