Pass field class attribute to form field component

--- a/travelsFront/app/templates/components/model-form/fields/input.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/input.hbs
@@ -5,6 +5,8 @@
     errors=errors
     isTouched=isTouched
 
+    classNames=fattrs.class
+
     type=fattrs.type
     icon=fattrs.icon
     accesskey=fattrs.accesskey
