--- a/travelsFront/app/templates/components/model-form/fields/select.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/select.hbs
@@ -5,6 +5,8 @@
     label=label
     placeholder=label
 
+    classNames=fattrs.class
+
     getItems=getChoicesCBPromise
     itemLabelCallback=getChoiceLabel
 
