Properly pass input field attrs
use passThru attribute

--- a/travelsFront/app/templates/components/model-form/fields/input.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/input.hbs
@@ -6,33 +6,6 @@
     isTouched=isTouched
 
     classNames=fattrs.class
-
-    type=fattrs.type
-    icon=fattrs.icon
-    accesskey=fattrs.accesskey
-    autocomplete=fattrs.autocomplete
-    autofocus=fattrs.autofocus
-    autosave=fattrs.autosave
-    dir=fattrs.dir
-    disabled=fattrs.disabled
-    hidden=fattrs.hidden
-    inputmode=fattrs.inputmode
-    lang=fattrs.lang
-    list=fattrs.list
-    max=fattrs.max
-    maxlength=fattrs.maxlength
-    min=fattrs.min
-    minlength=fattrs.minlength
-    multiple=fattrs.multiple
-    pattern=fattrs.pattern
-    readonly=fattrs.readonly
-    required=fattrs.required
-    size=fattrs.size
-    spellcheck=fattrs.spellcheck
-    step=fattrs.step
-    tabindex=fattrs.tabindex
-    title=fattrs.title
-    textarea=fattrs.textarea
-    rows=fattrs.rows
-    columns=fattrs.columns
+    
+    passThru=fattrs
 }}
