--- a/travelsFront/app/templates/components/model-form/fields/select.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/select.hbs
@@ -17,7 +17,7 @@
     autofocus=fattrs.autofocus
     autosave=fattrs.autosave
     dir=fattrs.dir
-    disabled=fattrs.disabled
+    disabled=disabled
     hidden=fattrs.hidden
     inputmode=fattrs.inputmode
     lang=fattrs.lang
