--- a/travelsFront/app/templates/components/model-form/fields/date.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/date.hbs
@@ -8,11 +8,35 @@
 
 {{# if fattrs.time }}
 <div layout>
-{{ pick-a-date placeholder='' classNames="flex-60" date=value on-selected=(action handleDate) }}
-{{ pick-a-time placeholder='' classNames="flex-40" date=value on-selected=(action handleDate) }}
+    {{ pick-a-date 
+        placeholder=''
+        flex=70
+        required=fattrs.required
+        disabled=fattrs.disabled
+        readonly=fattrs.readonly
+        class="md-input"
+        date=(readonly dateValue)
+        options=(hash format="d mmmm, yyyy")
+        on-selected=(action handleDate) }}
+    {{ pick-a-time
+        placeholder=''
+        flex=30
+        required=fattrs.required
+        disabled=fattrs.disabled
+        readonly=fattrs.readonly
+        class="md-input"
+        date=(readonly dateValue)
+        on-selected=(action handleDate) }}
 </div>
 {{ else }}
-{{ pick-a-date placeholder='' date=value on-selected=(action handleDate) }}
+    {{ pick-a-date
+        placeholder=''
+        required=fattrs.required
+        disabled=fattrs.disabled
+        readonly=fattrs.readonly
+        class="md-input"
+        date=(readonly dateValue)
+        on-selected=(action handleDate) }}
 {{/if}}
 
 {{#if iconRight}}
