Update fieldset templates
use paper-card content to display fieldsets

--- a/travelsFront/app/templates/components/model-form/fields.hbs
+++ b/travelsFront/app/templates/components/model-form/fields.hbs
@@ -6,6 +6,7 @@
             fields=fieldset.fields 
             object=object 
             label=fieldset.label 
+            text=fieldset.text
             isTouched=isTouched 
             layout=fieldset.layout
         }}
