Fix input form field component value handling
use readonly to enforce data down actions up

--- a/travelsFront/app/templates/components/model-form/fields/input.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/input.hbs
@@ -1,6 +1,6 @@
 {{paper-input
     label=label
-    value=value
+    value=(readonly value)
     onChange=(action 'handleChange')
     errors=errors
     isTouched=isTouched
