--- a/travelsFront/app/templates/advanced-list.hbs
+++ b/travelsFront/app/templates/advanced-list.hbs
@@ -14,33 +14,22 @@
 					<th>Ημ/νία Αναχώρησης</th>
 					<th>Ημ/νία Επιστροφής</th>
 					<th>Κατάσταση</th>
+					<th class="icon-cell">&nbsp;</th>
+          <th class="icon-cell">&nbsp;</th>
+          <th class="icon-cell">&nbsp;</th>
 				</tr>
 			</thead>
+			
 			<tbody>
-
-			{{#each model as |petition|}}
-				{{#if petition.project.name}}
-					<tr>
-						<td>{{petition.name}}</td>
-						<td>{{petition.surname}}</td>
-						<td>{{petition.project.name}}</td>
-						<td>{{petition.arrivalPoint.name}}</td>
-						<td>{{petition.creationDate}}</td>
-						<td>{{petition.updateDate}}</td>
-						<td>{{petition.taskStartDate}}</td>
-						<td>{{petition.taskEndDate}}</td>
-						<td>{{petition.status.name}}</td>
-						<td><button type="submit" class="btn btn-warning btn-small" {{action "petitionEdit" petition.id on="click"}} disabled={{not (or (eq petition.status.name "υποβεβλημένη από μετακινούμενο") (eq petition.status.name "σε επεξεργασία απο τη γραμματεία")) }}>Επεξεργασία</button></td>
-						<td><button type="submit" class="btn btn-danger btn-small" {{action "petitionDelete" petition.id petition.status.name on="click"}} disabled={{not (or (eq petition.status.name "υποβεβλημένη από μετακινούμενο") (eq petition.status.name "σε επεξεργασία απο τη γραμματεία")) }}>Διαγραφή</button></td>
-						<td><button type="submit" class="btn btn-danger btn-small" {{action "petitionUndo" petition.id on="click"}} disabled={{or (eq petition.status.name "υποβεβλημένη από μετακινούμενο") (eq petition.status.name "σε επεξεργασία απο τη γραμματεία") }}>Αναίρεση Υποβολής </button></td>
-					</tr>
-				{{/if}}
-			{{/each}}
-
+				{{#each model as |petition|}}
+					{{#if (gt petition.status 2)}}
+						{{petition-listing petition=petition}}
+					{{/if}}
+				{{/each}}
 			</tbody>
 		</table>
 <!-- Message Modal-->
-		<div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<!-- <div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header" id="styleModal">
@@ -49,7 +38,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 	</div>
 {{else}}
