Implement an enhanced version of submit action
Both models user-petition and user-petition-submission use the submit action of form component.

--- a/travelsFront/app/templates/user-petition.hbs
+++ b/travelsFront/app/templates/user-petition.hbs
@@ -1,12 +1,12 @@
 {{ page-toolbar pageTitle=(if newPetition "Create a petition" "Edit petition") }}
 
 {{#paper-content classNames="md-padding"}}
-    {{# model-form/form model as |form| }}
+    {{# model-form/form model registerForm=this getModelForSave=getModelForSave as |form| }}
         {{ form.messages }}
         {{ form.fields }}
         {{# form.controls }}
             {{#paper-button 
-                onClick=(action "submitToState2")
+                onClick=(action "handleSubmit")
                 warn=true
                 raised=true
                 disabled=inProgress
