Fix autocomplete initial value resolving

--- a/travelsFront/app/templates/components/model-form/fields/autocomplete.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/autocomplete.hbs
@@ -2,9 +2,10 @@
     source=choices
     lookupKey='label'
     model=choiceModel
+    value=value
     floating=true
     label=label
     placeholder=label
     minLength=(if minLength minLength 0)
     errors=errors
-    }}
+}}
