Autocomplete field improvements
- improved value handling (allow null values to be set)
- pass additional attrs

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -117,3 +117,13 @@ p.rt {
     background-color: transparent;
   }
 }
+
+
+.model-form {
+  md-content.model-form-fieldset {
+    md-card-content {
+      padding-bottom: 0;
+    }
+  }
+  md-autocomplete[disabled] { background-color: transparent; }
+}
