Support for flat fieldsets
fieldsets that render with no paper-card layout

--- a/travelsFront/app/templates/components/model-form/fields.hbs
+++ b/travelsFront/app/templates/components/model-form/fields.hbs
@@ -9,6 +9,7 @@
             text=fieldset.text
             isTouched=isTouched 
             layout=fieldset.layout
+            flat=fieldset.flat
         }}
     {{/each}}
 {{/if}}
