--- a/travelsFront/app/templates/components/model-form/set.hbs
+++ b/travelsFront/app/templates/components/model-form/set.hbs
@@ -1,3 +1,4 @@
+{{#unless flat}}
 {{#paper-content classNames="md-padding layout-column model-form-fieldset" flex=layout.flex}}
 {{#paper-card as |card|}}
     {{#card.title as |title|}}
@@ -19,3 +20,16 @@
     {{/card.content}}
 {{/paper-card}}
 {{/paper-content}}
+{{ else }}
+  {{#paper-content classNames="md-padding layout-column model-form-fieldset" flex=layout.flex}}
+    {{#paper-content classNames="layout-wrap layout-xs-column layout-gt-xs-row" }}
+      {{#each fields as |field|}}
+        {{model-form/field 
+            field=field
+            object=object
+            isTouched=isTouched
+        }}
+      {{/each}}
+    {{/paper-content}}
+  {{/paper-content}}
+{{/unless}}
