Pass type attribute to paper-input
fixes login password field

--- a/travelsFront/app/templates/components/model-form/fields/input.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/input.hbs
@@ -6,6 +6,7 @@
     isTouched=isTouched
 
     classNames=fattrs.class
+    type=fattrs.type
     
     autofocus=fattrs.autofocus
     disabled=fattrs.disabled
