Fix user petition workflow
- improved submit error handling
- automatically update country/movement categories readonly fields
- other minor fixes

--- a/travelsFront/app/templates/components/model-form/fields/input.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/input.hbs
@@ -7,6 +7,7 @@
 
     classNames=fattrs.class
     type=fattrs.type
+    textarea=fattrs.textarea
     
     autofocus=fattrs.autofocus
     disabled=fattrs.disabled
