--- a/travelsFront/app/templates/components/model-form/fields/select.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/select.hbs
@@ -51,3 +51,16 @@
   {{/paper-option}}
 {{/each}}
 {{/paper-select}}
+
+{{#if (and hasErrors isTouched)}}
+<div class="md-input-messages-animation md-auto-hide" ng-messages>
+  {{#each errors as |error index|}}
+    <div
+      id="error-{{index}}"
+      class="md-input-error">
+      {{error.message}}
+    </div>
+  {{/each}}
+</div>
+{{/if}}
+
