--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -75,23 +75,19 @@ table {
         padding: 12px 8px;
         text-align: left;
     }
+    th.link-tab {
+      text-align: center;      
+    }
     td {
         padding: 6px 8px;
         text-align: left;
     }
-    td.icon-cell, th.icon-cell {
+    td.icon-cell {
         padding-left: 1px;
         padding-right: 1px;
     }
     tr:nth-child(even) td {
         background-color: #FDF0F8;
-    }
-}
-
-p.rt {
-    text-align: right;
-    a {
-        display: inline-block;      
     }
 }
 
