Add dse in petition list

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -73,14 +73,14 @@ table {
         background: #C74286;
         color: white;
         padding: 12px 8px;
-        text-align: left;
+        text-align: center;
     }
     th.link-tab {
       text-align: center;      
     }
     td {
         padding: 6px 8px;
-        text-align: left;
+        text-align: center;
     }
     td.icon-cell {
         padding-left: 1px;
