--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -3,16 +3,17 @@
 <table class="table"> 
     <thead>
         <tr>
-            <th>Όνομα</th>
-            <th>Επώνυμο</th>
-            <th>Έργο</th>
-            <th>Προορισμός</th>
-            <th>Ημ/νια Δημιουργίας</th>
-            <th>Τελευταία ανανέωση</th>
-            <th>Ημ/νία Αναχώρησης</th>
-            <th>Ημ/νία Επιστροφής</th>
-            <th>Κατάσταση</th>
-            <th class="link-tab" colspan="3">{{#paper-button raised=true primary=true onClick=(transition-to "userPetition" "new") bubbles=false }}Νεα Αιτηση{{/paper-button}}</th>
+          <th>ΔΣΕ</th> 
+          <th>Όνομα</th>
+          <th>Επώνυμο</th>
+          <th>Έργο</th>
+          <th>Προορισμός</th>
+          <th>Ημ/νια Δημιουργίας</th>
+          <th>Τελευταία ανανέωση</th>
+          <th>Ημ/νία Αναχώρησης</th>
+          <th>Ημ/νία Επιστροφής</th>
+          <th>Κατάσταση</th>
+          <th class="link-tab" colspan="3">{{#paper-button raised=true primary=true onClick=(transition-to "userPetition" "new") bubbles=false }}Νεα Αιτηση{{/paper-button}}</th>
         </tr>
     </thead>
     <tbody>
