--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -3,8 +3,8 @@
 <td>{{petition.last_name}}</td>
 <td>{{petition.project.name}}</td>
 <td>{{petition.arrival_point.name}}</td>
-<td>{{petition.creationDate}}</td>
-<td>{{petition.updateDate}}</td>
+<td>{{to-date petition.created}}</td>
+<td>{{to-date petition.updated}}</td>
 <td>{{to-date petition.task_start_date}}</td>
 <td>{{to-date petition.task_end_date}}</td>
 <td>{{petition.status}}</td>
