--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -12,7 +12,7 @@
     {{#paper-button type="submit" raised=true onClick=(transition-to "userPetition" petition.petition_id) iconButton=true}}{{fa-icon "pencil"}}{{/paper-button}}
 </td>
 <td class="icon-cell">
-    {{#paper-button type="submit" raised=true onClick=(action "petitionDelete" petition.petition_id petition.status) iconButton=true}}{{fa-icon "trash-o"}}{{/paper-button}}
+    {{#paper-button type="submit" raised=true onClick=(action "del" petition.petition_id petition.status) iconButton=true}}{{fa-icon "trash-o"}}{{/paper-button}}
 </td>
 <td class="icon-cell">
     {{#paper-button type="submit" raised=true onClick=(action "petitionUndo" petition.petition_id) iconButton=true}}{{fa-icon "undo"}}{{/paper-button}}
